# power_market_rag

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PROJECT_CONTEXT.md  README.md  SECURITY.md  annex33_capacity_analysis.txt  batch_process_documents.py  diagnose_pdf.py  docker-compose.dev.yml  docker-compose.yml  install.sh  jeju_capacity_settlement_formulas.json  jeju_settlement_formulas_complete.json  jeju_settlement_formulas_updated.json  load_all_documents.py  load_log.txt  load_power_market_rules.py  power_market_rag.py  power_market_rag_complete.md  power_market_rag_enhanced.py  process_all_documents.py  process_single_doc.py  pyproject.toml  pytest.ini  rebuild_enhanced_system.py  requirements.txt  run.sh  run_enhanced_system.sh  test_basic.py  test_monitoring_system.py  test_multimodal_system.py
.github/workflows/: ci.yml  security.yml
backups/20250714_094834/metadata/: 전력시장운영규칙(250710)_별표27_수요반응자원 전력거래시스템 운영 절차_metadata.json
backups/20250714_095931/metadata/: documents.json  sections.json
config/: __init__.py  config.yaml  settings.py
core/: __init__.py  actual_formula_extractor.py  document_hierarchy_analyzer.py  enhanced_vector_engine.py  metadata_extractor.py  multimodal_processor.py  relationship_mapper.py  vector_engine.py
data/batch_results/: batch_processing_results_1752376780.json
data/metadata/: 전력시장운영규칙(250710)_별표29_수요반응참여고객의 전기소비형태 검증 기준_metadata.json
data/processed/: 전력시장운영규칙(250710)_별표27_수요반응자원 전력거래시스템 운영 절차_processed.json  전력시장운영규칙(250710)_별표29_수요반응참여고객의 전기소비형태 검증 기준_processed.json
data/vectors/: vector_store.py
data/vectors/ce57b961-3dcc-4897-9496-b7772f9f5929/: index_metadata.pickle
data/vectors/chroma/ff2e84b2-ee08-4917-bc5b-fec8d3f0480a/: index_metadata.pickle
docs/: CI_CD.md
documents/: 계통운영기준.md  발전계획_가이드.md  발전계획_수립절차.md  전력시장_거래절차.md  전력시장_기본규칙.txt
embeddings/: document_processor.py  text_embedder.py
generation/: answer_generator.py
monitoring/: README.md  __init__.py  alert_rules.yaml
monitoring/alerts/: __init__.py  alert_manager.py  channels.py  rules.py  triggers.py
monitoring/dashboard/: __init__.py  chart_data.py  dashboard_api.py  websocket_manager.py
monitoring/logging/: __init__.py  formatters.py  handlers.py  logger.py
monitoring/metrics/: __init__.py  collector.py  decorators.py  prometheus_metrics.py  system_metrics.py
retrieval/: document_retriever.py
scripts/: deploy.sh
tests/: conftest.py  test_api.py  test_document_processor.py  test_rag_system.py  test_system_integration.py
